# circleguy

./: .gitignore  Cargo.toml  README.md  circleguy.js  circleguy_bg.wasm  index.html
Configs/: keybinds.kdl
Configs/Keybinds/: groups.kdl
Configs/Keybinds/Puzzles/: 55stars.kdl
Puzzles/Definitions/: 1010101010geranium.kdl  1010pyramid.kdl  1010tenten.kdl  122222plus.kdl  126cross.kdl  1310pleione_plus.kdl  1310visionplus.kdl  155pyramid.kdl  162222plus.kdl  2222flowers.kdl  2222flowers_2_color.kdl  2222sadness.kdl  2222sadness_easy.kdl  3222tarnished.kdl  33arecibo.kdl  42222dualpair.kdl  42buffer.kdl  44444dualpair.kdl  4444sphenic_tetraxe.hps  4444sphenic_tetraxe.kdl  444pair.kdl  44squares.hps  44squares.kdl  48deepcutsquareoctagon.kdl  510stars.kdl  522222moonshine.kdl  55433dualpair.kdl  55bandaged-stars.kdl  55decagons.kdl  55stars.hps  55stars.kdl  55stars_last_step.kdl  55stars_second_last_step.kdl  55stars_third_last_step.kdl  62buffer.kdl  663inner.kdl  664inner.kdl  666.kdl  666666ring.kdl  666666ring_7_color.kdl  (+72 more)
Puzzles/Definitions/3 Circles/: accesspoint.hps  circle_stars_plus.hps  pair.hps  sphenic_triaxe_oriented.hps  triangle.hps
Puzzles/Logs/: 1010101010geranium.kdl  a.kdl  logfile.kdl  moonshine.kdl  test.kdl
src/: app.rs  arc.rs  circle_utils.rs  data_storer.rs  hps.rs  intern.rs  io.rs  keybinds.rs  main.rs  piece.rs  piece_shape.rs  puzzle.rs  puzzle_generation.rs  render.rs  sphenic_biaxe.rs  testing.rs  turn.rs
src/complex/: arc.rs  c64.rs  complex_circle.rs  mod.rs  point.rs  rotation.rs  vector.rs
src/hps/: builtins.rs  data_storer.rs  hps.rs  mod.rs
src/hps/data_storer/: io.rs  (+5 more)
src/puzzle/: color.rs  intern.rs  mod.rs  piece.rs  piece_shape.rs  puzzle.rs  render_piece.rs  solve_detection.rs  turn.rs
src/tests/: circle_tests.rs  mod.rs
src/ui/: app.rs  data_storer.rs  io.rs  keybinds.rs  mod.rs  puzzle_generation.rs  render.rs
(+43 files in other folders)
